assets/css/style.css
:root {
    --text-color: black;
    --header-color: #091f36c5;
    --page-color: #1d1e22;
    --light-text: #d4d4dccc;
    --border-color: #4f5f76;
    /* colors for reference: 
     --blue-popsicle: #0f2862;
     --redline: #9e363a; 
     --purple-shadow: #091f36; 
     --grey-blue-leaf: #4f5f76;
     --original-text-color: black;
     --original-header-color: gray;
     --original-page-color: #002a2f;
     --original-light-text: #FFFFFF; 
     --Are ya yellow?!: #feda6a;
     --Silver Fox: #d4d4dc;
     --Deep Matte Grey: #393f4d;
     --Dark Slate: #1d1e22; */
}

* {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 1vw;
    color: var(--text-color);  
}

body {
    display: flex;
    flex-direction: column;
    background-color: var(--page-color);
    height: 100%;
}
header {
    background-color: var(--header-color);
    display: block;
}

#navbar {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    background-color: var(--page-color);
    height: 6vw;
    width: 100vw;
    padding: 1vw;
}

h1 {
    font-size: 2.5rem;
    color: var(--light-text);
}

#navbar > nav {
    display: flex;
    justify-content: space-between;
}

#navbar a {
    text-decoration: none;
    font-size: 1.5rem;
    color: var(--light-text);
    padding: 1vw 1vw;
}
#banner {
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-start;
    align-items: flex-end;
    height: 10vw;
}

h2 {
    font-size: 2rem;
    color:var(--light-text);
    padding: 0 1vw 1vw 0;
}


main {
    display: flex;
    flex-direction: column;
    padding: 4vw;
    height: 60vw;
}

article {
    display: inherit;
    flex-direction: row;
    justify-content: space-between;
}

article section {
    justify-self: center;
}

h3 {
    color: var(--light-text);
    font-size: 1.5em;
    border-right: 3px solid var(--border-color);
    border-radius: 3vw;
    padding: 1vw;
    margin-right: 1vw;
}

article p {
    color: var(--light-text);
}

#work {
    display: inherit;
    flex-direction: row;
    justify-content: flex-start;
}

#work-cards {
    display: inherit;
    flex-direction: row;
    justify-content: space-evenly;
}

.card {
    background-size: contain;
    font-size: 1rem;
    color: var(--light-text);
}

aside .section-header{
    display: flex;
    justify-content: flex-start;
    align-items: space-evenly;
}

#contact-links {
    display: none;
}

#contact-links a {
    padding-left: 10vw;
    text-decoration: none;
    color: var(--light-text);
    font-weight: 700;
}
aside:hover #contact-links {
    display: inherit;
    align-self: center;
}

h4{
    color: var(--light-text);
    text-align: center;
}

